[build-system]
requires = ["setuptools", "wheel", "py2app"]
build-backend = "setuptools.build_meta"

[tool.py2app]
script = "pvsim.py"

[project]
name = "pvsim"
version = "6.2.2b1"
description = "Portable Verilog Simulator"
authors = [{ name = "Scott Forbes" }]
dependencies = [
    "wxPython",
    "pypubsub"
]
